<resources>
    <string name="app_name">DoctorAutomation</string>
    <string name="login_sign_in_button_text">Sign In</string>
    <string name="login_email_hint_text">Email</string>
    <string name="login_password_hint_text">Password</string>
    <string name="login_sign_in_header_text">Sign in</string>
    <string name="login_forgot_password_button_text">Forgot password?</string>
    <string name="login_other_account_text">or signup with</string>
    <string name="facebook_button_content_description">Facebook Button</string>
    <string name="google_button_content_description">Google Button</string>
</resources>
